# ImageMagickGUI

./: .gitignore  README.md  build.py  main.py  pyproject.toml  requirements.txt  setup.py
.github/: WORKFLOWS.md  copilot-instructions.md
.github/workflows/: build.yml  ci.yml  code-quality.yml  release.yml  simple.yml
